kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: n-tiers-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: n-tiers-app
  template:
    metadata:
      labels:
        app: n-tiers-app
    spec:
      containers:
        - name: frontend
          image: n-tiers-frontend:latest
          ports:
            - containerPort: 80

        - name: backend
          image: n-tiers-backend:latest
          ports:
            - containerPort: 8080
